# Automated-EV-Charging

./: .gitignore  README.md  requirements.txt
Universal_Robots_ROS2_Description/config/: initial_positions.yaml
Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
Universal_Robots_ROS2_Description/rviz/: view_robot.rviz
Universal_Robots_ROS2_Description/urdf/: camera.xacro  ur.urdf.xacro
Universal_Robots_ROS2_Driver/ur_bringup/: package.xml
Universal_Robots_ROS2_Driver/ur_bringup/config/: home_position.yaml
Universal_Robots_ROS2_Driver/ur_bringup/launch/: go_to_pos.launch.py
Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/: CMakeLists.txt  package.xml
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/action/: MoveToPose.action
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/config/: gz_bridge.yaml  positions.yaml  ur_controllers.yaml
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/launch/: EV_charge.launch.launch.py  EV_charge.launch.py  ur_sim_application.launch.py  ur_sim_control.launch.py  ur_sim_moveit.launch.py
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/models/ccs2_inlet/: model.config  model.sdf
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/models/ccs2_inlet_cube/: ccs2_inlet_box.dae  model.config  model.sdf
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/models/ccs2_outlet/: model.config  model.sdf
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/src/: abs_move_moveit.cpp  main_logic.cpp  manual_move.cpp  move.cpp  move_moveit.cpp
Universal_Robots_ROS2_GZ_Simulation/ur_simulation_gz/worlds/: EV_scenario.sdf  test.sdf  test_approach.sdf
hri_fullbody/: package.xml  setup.py
hri_fullbody/config/: 00-defaults.yml
hri_fullbody/hri_fullbody/: fullbody_detector.py
hri_fullbody/launch/: hri_fullbody.launch.py  hri_fullbody_with_args.launch.py
yolo_model/: package.xml  setup.cfg  setup.py
yolo_model/yolo_model/: ccs2_2_dc_ports.stl  find_K_D_matrices.py  image_view.py  print_pc.py  shape_detector.py  yolo_node.py
