[develop]
script_dir=$base/lib/yolo_model
[install]
install_scripts=$base/lib/yolo_model

[options.entry_points]
console_scripts = 
    yolo_node = yolo_model.yolo_node:main
    image_view = yolo_model.image_view:main
    print_pc = yolo_model.print_pc
    find_K_D_matrices = yolo_model.find_K_D_matrices:main
